# blazepose-studio-pro

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  useonxx.md  videoglwidget.cpp  videoglwidget.h
include/core/: videopluginmanager.h
include/plugins/: edgedetectionplugin.h  ivideoplugin.h  overlayvideoplugin.h
include/ui/: mainwindow.h  pluginmanagerwindow.h
include/widgets/: videoglwidget.h
src/: main.cpp
src/core/: videopluginmanager.cpp
src/plugins/: edgedetectionplugin.cpp  overlayvideoplugin.cpp
src/ui/: mainwindow.cpp  pluginmanagerwindow.cpp  pluginmanagerwindow.ui
src/widgets/: videoglwidget.cpp
